--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-Frame-Options" content="DENY">
+    <!-- <meta http-equiv="X-Frame-Options" content="DENY">
     <meta http-equiv="Content-Security-Policy" 
-    content="frame-ancestors 'none'" />
+    content="frame-ancestors 'none'" /> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -44,5 +44,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script type="text/javascript"> if ( window.self !== window.top ) {     window.top.location.href=window.location.href; } </script>
+  <!-- <script type="text/javascript"> if ( window.self !== window.top ) {     window.top.location.href=window.location.href; } </script> -->
 </html>
